--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <br/>
 <h2>About me</h2>
 <p>
-<img style="float: right; margin: 15px 0px 10px 20px;" src="https://dennishnf.github.io/dennishnf-photo.jpg" alt="90" width="142" height="142" /> 
+<img style="float: right; margin: 15px 0px 10px 20px;" src="/dennishnf-photo.jpg" alt="90" width="142" height="142" /> 
 <p align="justify" style="text-indent:0"> 
 <!-- <img style="float: left; margin: 15px 20px 10px 0px;" src="https://dennishnf.github.io/dennishnf-photo.jpg" alt="90" width="142" height="142" /> 
 <p align="justify" style="text-indent:0"> -->
@@ -137,7 +137,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 18-06-2020 15:50 GMT <br/> 
+Website updated 18-06-2020 17:28 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
