--- a/pre.html
+++ b/pre.html
@@ -14,8 +14,8 @@
 <title>Dennis Núñez Fernández</title>
 
 <!-- Favicon of the website -->
-<link rel="shortcut icon" href="/icon.ico" type="image/x-icon" />
-<link rel="icon" href="/icon.ico" type="image/ico" />
+<link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
+<link rel="icon" href="icon.ico" type="image/ico" />
 
 <style type="text/css">:root .adsbygoogle,
 :root #header + #content > #left > #rlblock_left,
