--- a/pre.html
+++ b/pre.html
@@ -44,7 +44,7 @@
 <div id="layout_content">
 <div id="site_title">
 <h1><b><a href="">Dennis Núñez Fernández</a></b></h1>
-<h2>Bachelor in Science with mention in Electronic Engineering</h2>
+<h2>Bachelor of Science with mention in Electronic Engineering</h2>
 <h2>Universidad Nacional de Ingeniería - UNI</h2>
 </div>
 <div class="navigation">
