--- a/pre.html
+++ b/pre.html
@@ -45,7 +45,7 @@
 <div id="site_title">
 <h1><b><a href="">Dennis Núñez Fernández</a></b></h1>
 <h2>Bachelor of Science in Electronic Engineering</h2>
-<h2>Universidad Nacional de Ingeniería - UNI</h2>
+<h2>UNI - Universidad Nacional de Ingeniería</h2>
 </div>
 <div class="navigation">
 <ul>
