--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div id="site_title">
 <h1><b><a href="">Dennis Núñez Fernández</a></b></h1>
 <h2>Bachelor of Science in Electronic Engineering</h2>
-<h2>UNI - Universidad Nacional de Ingeniería</h2>
+<h2>Universidad Nacional de Ingeniería - UNI</h2>
 </div>
 <div class="navigation">
 <ul>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 19-06-2020 08:14 GMT <br/> 
+Website updated 19-06-2020 08:15 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
