--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <li>2020/03 - Glad to obtain a full grant on the upcoming School of AI programme 2020 - Pi School</li>
 <li>2020/01 - Selected as one winner of the AI Latin American SumMIT, held at the MIT Media Lab</li>
 <li>2019/11 - Selected by Fondecyt Peru for a research stay at the University of Padua, Italy</li>
-<li>2019/11 - Glad to give a talk of AI in Healtcare at the faculty of Pharmacy and Biochemistry - UNMSM</li>
+<li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry (UNMSM)</li>
 <li>2019/10 - Winner of the LXAI Travel Grant to participate in the top NeurIPS 2019 conference</li>
 <li>2019/10 - My 3 submitted abstracts were accepted for the LXAI Workshop at NeurIPS 2019</li>
 <li>2019/10 - Our paper, in collaboration with IIFIEE UNI, was accepted for BTSym'19</li>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 05:54 GMT <br/> 
+Website updated 20-06-2020 05:55 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
