--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <li>2019/05 - Winner of the ICML Travel Grant to participate in this prestigious conference</li>
 <li>2019/04 - My submitted abstract was accepted for the LXAI Workshop at ICML 2019</li>
 <li>2018/06 - My submitted paper was accepted for the INTERCON 2018 conference</li>
-<li>2017/08 - My  paper, under supervision of PhD Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</li>
+<li>2017/08 - My work, under the advising of PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</li>
 <li>2016/11 - Selected as session chair for the UNESCO UCTE 2016 conference, Poland</li>
 <li>2016/06 - Selected for a fellowship under the UNESCO/Poland Program at AGH UST, Poland</li>
 <li>2015/07 - Graduated with 1st place in my class at Universidad Nacional de Ingeniería - UNI</li>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 05:57 GMT <br/> 
+Website updated 20-06-2020 05:59 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
