--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <li>2020/06 - My paper was accepted for oral presentation at ML4GH Workshop at the prestigious ICML 2020</li>
 <li>2020/06 - Grateful for winning a scholarship for the ACL 2020, the best conference on NLP</li>
 <li>2020/06 - Glad to obtain a scholarship for the Robotics: Science and Systems (RSS) conference</li>
-<li>2020/05 - Selected as member of the program committee (reviewer) for the LXAI Workshop at ICML 2020</li>
+<li>2020/05 - Selected as program committee member (reviewer) for the LXAI Workshop at ICML 2020</li>
 <li>2020/05 - Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</li>
 <li>2020/03 - Included as part of the program committee (reviewer) for the IEEE INTERCON 2020 conf.</li>
 <li>2020/03 - Selected to participate in the Cornell, Maryland, Max Planck Pre-doctoral School 2020</li>
@@ -102,12 +102,12 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <li>2019/09 - Selected as member of the program committee (reviewer) for LXAI Workshop at NeurIPS 2019</li>
 <li>2019/09 - Glad I was invited to give a talk at the 22vo Meetup 2019 Data Science Research Perú</li>
 <li>2019/09 - Glad to give a talk about a UPCH project at an event of Innóvate Perú: "Innova como ellos"</li>
-<li>2019/06 - My 2 submitted papers were accepted for the INTERCON 2019 conference</li>
+<li>2019/06 - My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</li>
 <li>2019/06 - My 2 submitted papers were accepted for the SIMBig 2019 conference</li>
 <li>2019/05 - Glad to give a talk at Computer Science Colloquium, chaired by PhD Modesto Montoya</li>
 <li>2019/05 - Winner of the ICML Travel Grant to participate in this prestigious conference</li>
 <li>2019/04 - My submitted abstract was accepted for the LXAI Workshop at ICML 2019</li>
-<li>2018/06 - My submitted paper was accepted for the INTERCON 2018 conference</li>
+<li>2018/06 - My submitted paper was accepted for the IEEE INTERCON 2018 conference</li>
 <li>2017/08 - My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</li>
 <li>2016/11 - Selected as session chair for the UNESCO UCTE 2016 conference, Poland</li>
 <li>2016/06 - Selected for a fellowship under the UNESCO/Poland Program at AGH UST, Poland</li>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 06:05 GMT <br/> 
+Website updated 20-06-2020 06:07 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
