--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry - UNMSM</li>
 <li>2019/10 - Winner of the LXAI Travel Grant to participate in the top NeurIPS 2019 conference</li>
 <li>2019/10 - My 3 submitted abstracts were accepted for the LXAI Workshop at NeurIPS 2019</li>
-<li>2019/10 - Our paper, in collaboration with IIFIEE UNI, was accepted for BTSym'19</li>
+<li>2019/10 - Our paper, in collaboration with the IIFIEE UNI, was accepted for BTSym'19 conference</li>
 <li>2019/09 - Selected as program committee member (reviewer) for LXAI Workshop at NeurIPS 2019</li>
 <li>2019/09 - Glad I was invited to give a talk at the 22vo Meetup 2019 Data Science Research Perú</li>
 <li>2019/09 - Glad to give a talk about a UPCH project at an event of Innóvate Perú: "Innova como ellos"</li>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 06:13 GMT <br/> 
+Website updated 20-06-2020 06:16 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
