--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry - UNMSM</li>
 <li>2019/10 - Winner of the LXAI Travel Grant to participate in the top NeurIPS 2019 conference</li>
 <li>2019/10 - My 3 submitted abstracts were accepted for the LXAI Workshop at NeurIPS 2019</li>
-<li>2019/10 - Our paper, in collaboration with the IIFIEE UNI, was accepted for BTSym'19 conference</li>
+<li>2019/10 - Our paper, in collaboration with the IIFIEE UNI, was accepted for the BTSym'19 conf.</li>
 <li>2019/09 - Selected as program committee member (reviewer) for LXAI Workshop at NeurIPS 2019</li>
 <li>2019/09 - Glad I was invited to give a talk at the 22vo Meetup 2019 Data Science Research Perú</li>
 <li>2019/09 - Glad to give a talk about a UPCH project at an event of Innóvate Perú: "Innova como ellos"</li>
-<li>2019/06 - My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</li>
-<li>2019/06 - My 2 submitted papers were accepted for the SIMBig 2019 conference</li>
+<li>2019/06 - Cheerful that my 2 submitted papers were accepted for the IEEE INTERCON 2019</li>
+<li>2019/06 - Delighted that my 2 submitted papers were accepted for the SIMBig 2019 conference</li>
 <li>2019/05 - Glad to give a talk at Computer Science Colloquium, chaired by PhD Modesto Montoya</li>
 <li>2019/05 - Winner of the ICML Travel Grant to participate in this prestigious conference</li>
-<li>2019/04 - My submitted abstract was accepted for the LXAI Workshop at ICML 2019</li>
-<li>2018/06 - My submitted paper was accepted for the IEEE INTERCON 2018 conference</li>
+<li>2019/04 - Thrilled that my submitted abstract was accepted for the LXAI Workshop at ICML 2019</li>
+<li>2018/06 - Glad that my submitted paper was accepted for the IEEE INTERCON 2018 conference</li>
 <li>2017/08 - My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</li>
-<li>2016/11 - Selected as session chair for the UNESCO UCTE 2016 conference, Poland</li>
+<li>2016/11 - Selected as session chair for the UNESCO UCTE 2016 conference, Krakow, Poland</li>
 <li>2016/06 - Selected for a fellowship under the UNESCO/Poland Program at AGH UST, Poland</li>
 <li>2015/07 - Graduated with 1st place in my class at Universidad Nacional de Ingeniería - UNI</li>
 </ul>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 06:16 GMT <br/> 
+Website updated 20-06-2020 06:21 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
