--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/06 - My paper was selected for oral presentation at ML4GH Workshop at prestigious ICML 2020</li>
+<li>2020/06 - My paper was selected for oral presentation at the ML4GH Workshop at the ICML 2020</li>
 <li>2020/06 - Grateful for winning a scholarship for the ACL 2020, the best conference on NLP</li>
 <li>2020/06 - Glad to obtain a scholarship for the Robotics: Science and Systems (RSS) conference</li>
 <li>2020/05 - Selected as program committee member (reviewer) for the LXAI Workshop at ICML 2020</li>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 06:21 GMT <br/> 
+Website updated 20-06-2020 06:22 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
