--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <li>2019/06 - Cheerful that my 2 submitted papers were accepted for the IEEE INTERCON 2019</li>
 <li>2019/06 - Delighted that my 2 submitted papers were accepted for the SIMBig 2019 conference</li>
 <li>2019/05 - Glad to give a talk at Computer Science Colloquium, chaired by PhD Modesto Montoya</li>
-<li>2019/05 - Winner of the ICML Travel Grant to participate in this prestigious conference</li>
+<li>2019/05 - Selected as winner of a ICML travel grant to participate in this prestigious conference</li>
 <li>2019/04 - Thrilled that my submitted abstract was accepted for the LXAI Workshop at ICML 2019</li>
 <li>2018/06 - Glad that my submitted paper was accepted for the IEEE INTERCON 2018 conference</li>
 <li>2017/08 - My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</li>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 06:22 GMT <br/> 
+Website updated 20-06-2020 06:24 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
