--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <li>2019/04 - Thrilled that my submitted abstract was accepted for the LXAI Workshop at ICML 2019</li>
 <li>2018/06 - Glad that my submitted paper was accepted for the IEEE INTERCON 2018 conference</li>
 <li>2017/08 - My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</li>
-<li>2016/11 - Selected as session chair for the UNESCO UCTE 2016 conference, Krakow, Poland</li>
+<li>2016/11 - Selected as a session chair for the UNESCO UCTE 2016 conference, Poland</li>
 <li>2016/06 - Selected for a fellowship under the UNESCO/Poland Program at the AGH UST, Poland</li>
 <li>2015/07 - Graduated with the 1st place in my class at Universidad Nacional de Ingeniería - UNI</li>
 </ul>
@@ -138,7 +138,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 06:26 GMT <br/> 
+Website updated 20-06-2020 06:28 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
