--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/06 - <a href="https://mlforglobalhealth.org/schedule/">My 1st paper was selected for oral presentation at ML4GH Workshop at the ICML 2020</a></li>
+<li>2020/06 - <a href="https://mlforglobalhealth.org/schedule/">
+My 1st paper was selected for oral presentation at ML4GH Workshop at the ICML 2020</a></li>
 <li>2020/06 - My 2nd paper was accepted for poster presentation at ML4GH Workshop at the ICML 2020</li>
 <li>2020/06 - Grateful for winning a grant for the ACL 2020, the best conference on NLP</li>
 <li>2020/06 - Glad to obtain a grant for the Robotics: Science and Systems (RSS) conference</li>
@@ -139,7 +140,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 08:31 GMT <br/> 
+Website updated 20-06-2020 08:32 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
