--- a/index.html
+++ b/index.html
@@ -85,35 +85,67 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <h2>News</h2>
 <p>
 <ul>
+
 <li>2020/06 - <a href="https://mlforglobalhealth.org/schedule/">
 My 1st paper was selected for oral presentation at ML4GH Workshop at the ICML 2020</a></li>
+
 <li>2020/06 - My 2nd paper was accepted for poster presentation at ML4GH Workshop at the ICML 2020</li>
+
 <li>2020/06 - Grateful for winning a grant for the ACL 2020, the best conference on NLP</li>
+
 <li>2020/06 - Glad to obtain a grant for the Robotics: Science and Systems (RSS) conference</li>
+
 <li>2020/05 - Selected as program committee member (reviewer) for the LXAI Workshop at ICML 2020</li>
+
 <li>2020/05 - Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</li>
+
 <li>2020/03 - Included as program committee member (reviewer) for the IEEE INTERCON 2020</li>
+
 <li>2020/03 - Selected to participate in the Cornell, Maryland, Max Planck Pre-doctoral School 2020</li>
+
 <li>2020/03 - Glad to obtain a grant for the School of AI programme 2020, hosted by Pi School</li>
+
 <li>2020/01 - Selected as a winner of the AI Latin America SumMIT, held at the MIT Media Lab</li>
+
 <li>2019/11 - Selected by Fondecyt Peru for a research stay at the University of Padua, Italy</li>
+
 <li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry, UNMSM</li>
+
 <li>2019/10 - Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019</li>
+
 <li>2019/10 - My 3 submitted abstracts were accepted for the LXAI Workshop at NeurIPS 2019</li>
+
 <li>2019/10 - Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</li>
+
 <li>2019/09 - Selected as program committee member (reviewer) for LXAI Workshop at NeurIPS 2019</li>
+
 <li>2019/09 - Invited to give a talk at the 22vo Meetup 2019, Data Science Research Perú</li>
+
 <li>2019/09 - Glad to give a talk about a UPCH project at 'Innova como ellos' event, at Innóvate Perú</li>
+
 <li>2019/06 - My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</li>
+
 <li>2019/06 - My 2 submitted papers were accepted for the SIMBig 2019 conference</li>
+
 <li>2019/05 - Glad to give a talk at Computer Science Colloquium, chaired by PhD Modesto Montoya</li>
+
 <li>2019/05 - Selected as winner of a ICML travel grant to participate in this prestigious conference</li>
+
 <li>2019/04 - Thrilled that my submitted abstract was accepted for the LXAI Workshop at ICML 2019</li>
+
 <li>2018/06 - My submitted paper was accepted for the IEEE INTERCON 2018 conference</li>
+
 <li>2017/08 - My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</li>
-<li>2016/11 - Selected as a session chair for the UNESCO UCTE 2016 conference, Poland</li>
+
+<li>2016/11 - Selected as a presenter and session chair for the UNESCO UCTE 2016 conference, Poland</li>
+
+<li>2020/06 - <a href="https://mlforglobalhealth.org/schedule/">
+2016/11 - Selected as a presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a></li>
+
 <li>2016/06 - Selected for a fellowship under the UNESCO/Poland Program at the AGH UST, Poland</li>
+
 <li>2015/07 - Graduated with the 1st place in my class at Universidad Nacional de Ingeniería - UNI</li>
+
 </ul>
 </p>
 
@@ -140,7 +172,7 @@ My 1st paper was selected for oral presentation at ML4GH Workshop at the ICML 20
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 08:32 GMT <br/> 
+Website updated 20-06-2020 08:36 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
