--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ My 1st paper was selected for oral presentation at ML4GH Workshop at the ICML 20
 <li>2016/11 - Selected as a presenter and session chair for the UNESCO UCTE 2016 conference, Poland</li>
 
 <li>2020/06 - <a href="http://www.unesco.agh.edu.pl/fileadmin/default/templates/css/j/unesco/system/program_UCTE_2016_v12_2016_12_06x.pdf">
-2016/11 - Selected as a presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a></li>
+Selected as a presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a></li>
 
 <li>2016/06 - Selected for a fellowship under the UNESCO/Poland Program at the AGH UST, Poland</li>
 
@@ -172,7 +172,7 @@ My 1st paper was selected for oral presentation at ML4GH Workshop at the ICML 20
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 08:36 GMT <br/> 
+Website updated 20-06-2020 08:37 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
