--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ My 1st paper was selected for oral presentation at ML4GH Workshop at the ICML 20
 
 <li>2019/10 - Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019</li>
 
-<li>2019/10 - My 3 submitted abstracts were accepted for the LXAI Workshop at NeurIPS 2019</li>
+<li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters">
+My 3 submitted abstracts were accepted for the LXAI Workshop at NeurIPS 2019</a></li>
 
 <li>2019/10 - Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</li>
 
@@ -171,7 +172,7 @@ Selected as a presenter & session chair for the UNESCO UCTE 2016 conference, Pol
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 08:43 GMT <br/> 
+Website updated 20-06-2020 08:46 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
