--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ Thrilled that my submitted abstract was accepted for the LXAI Workshop at ICML 2
 
 <li>2018/06 - My submitted paper was accepted for the IEEE INTERCON 2018 conference</li>
 
-<li>2017/08 - My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</li>
+<li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html">
+My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</a></li>
 
 <li>2016/11 - <a href="http://www.unesco.agh.edu.pl/fileadmin/default/templates/css/j/unesco/system/program_UCTE_2016_v12_2016_12_06x.pdf">
 Selected as a presenter & session chair for the UNESCO UCTE 2016 conference, Poland</a></li>
@@ -174,7 +175,7 @@ Selected as a presenter & session chair for the UNESCO UCTE 2016 conference, Pol
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 08:51 GMT <br/> 
+Website updated 20-06-2020 08:53 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
