--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@ My 2 submitted papers were accepted for the SIMBig 2019 conference</a></li>
 <li>2019/04 - <a href="https://www.latinxinai.org/icml-2019-presenters">
 Thrilled that my submitted abstract was accepted for the LXAI Workshop at ICML 2019</a></li>
 
-<li>2018/06 - My submitted paper was accepted for the IEEE INTERCON 2018 conference</li>
+<li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding">
+My submitted paper was accepted for the IEEE INTERCON 2018 conference</a></li>
 
 <li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html">
 My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for CIARP 2017</a></li>
@@ -176,7 +177,7 @@ Selected as a presenter & session chair for the UNESCO UCTE 2016 conference, Pol
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 08:57 GMT <br/> 
+Website updated 20-06-2020 09:01 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
