--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@ Selected as program committee member (reviewer) for LXAI Workshop at NeurIPS 201
 
 <li>2019/09 - Glad to give a talk about a UPCH project at 'Innova como ellos' event, at Innóvate Perú</li>
 
-<li>2019/06 - My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</li>
+<li>2019/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding">
+My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</a></li>
 
 <li>2019/06 - <a href="https://simbig.org/SIMBig2019/en/program.html">
 My 2 submitted papers were accepted for the SIMBig 2019 conference</a></li>
@@ -138,7 +139,7 @@ My 2 submitted papers were accepted for the SIMBig 2019 conference</a></li>
 <li>2019/04 - <a href="https://www.latinxinai.org/icml-2019-presenters">
 Thrilled that my submitted abstract was accepted for the LXAI Workshop at ICML 2019</a></li>
 
-<li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding">
+<li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8484861/proceeding">
 My submitted paper was accepted for the IEEE INTERCON 2018 conference</a></li>
 
 <li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html">
@@ -177,7 +178,7 @@ Selected as a presenter & session chair for the UNESCO UCTE 2016 conference, Pol
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 20-06-2020 09:01 GMT <br/> 
+Website updated 20-06-2020 09:03 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
