--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/06 - Grateful for winning a LXAI grant for my participation in the prestigious ICML 2020</li>
 <li>2020/06 - <a href="https://mlforglobalhealth.org/schedule/">My 1st paper was selected for oral presentation at ML4GH Workshop at the ICML 2020</a></li>
+<li>2020/06 - Grateful for winning a LXAI grant for my participation in the prestigious ICML 2020</li>
+<li>2020/06 - <a href="https://mlforglobalhealth.org/schedule/">My submitted paper was selected for oral presentation at ML4GH Workshop @ ICML 2020</a></li>
 <li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/">My 2nd paper was accepted for poster presentation at ML4GH Workshop at the ICML 2020</a></li>
 <li>2020/06 - Grateful for winning a grant for the ACL 2020, the best conference on NLP</li>
 <li>2020/06 - Glad to obtain a grant for the Robotics: Science and Systems (RSS) conference</li>
@@ -140,7 +141,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 28-06-2020 04:18 GMT <br/> 
+Website updated 28-06-2020 04:19 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
