--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 <p>
 <ul>
 <li>2020/06 - <a href="https://sites.google.com/view/hsys2020/">My another paper was selected for poster presentation at HSYS workshop @ ICML 2020</a></li>
-<li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/">My papers were accepted for oral & poster presentation at ML4GH workshop @ ICML 2020</a></li>
+<li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/">My papers were accepted for oral & poster presentations at ML4GH workshop @ ICML 2020</a></li>
 <li>2020/06 - Thankful for winning a LXAI grant for my participation in the prestigious ICML 2020</li>
 <li>2020/06 - Grateful for winning a grant for the ACL 2020, the best conference on NLP</li>
 <li>2020/06 - Glad to obtain a grant for the Robotics: Science and Systems (RSS) conference</li>
@@ -140,7 +140,7 @@ Currently, I'm a research assistant at the Cayetano Heredia University (Peru). T
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 28-06-2020 05:52 GMT <br/> 
+Website updated 28-06-2020 06:08 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
