--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 <p align="justify" style="text-indent:0"> 
 <!-- <img style="float: left; margin: 15px 20px 10px 0px;" src="/dennishnf-photo.jpg" alt="90" width="142" height="142" /> 
 <p align="justify" style="text-indent:0"> -->
-Currently, I'm a research assistant at the Cayetano Heredia University (Peru). There, I develop Artificial Intelligence algorithms for early medical diagnosis. I obtained my bachelor degree in Science with mention in Electronic Engineering from the National University of Engineering - UNI, Peru, ranked first in my graduating class. 
+Currently, I'm a research assistant at the Cayetano Heredia University (Peru). There, I develop Artificial Intelligence algorithms for early medical diagnosis. I obtained my bachelor degree in Science with mention in Electronic Engineering from the National University of Engineering - UNI, Peru, ranked first in my graduating class. My research experience includes two research fellowships in Artificial Intelligence at AGH University of Science and Technology (Poland) and the University of Padova (Italy).
 <br/>
-My research experience includes two research fellowships in Artificial Intelligence at AGH University of Science and Technology (Poland) and the University of Padova (Italy). My participation in in prestigious conferences includes the ICML 2019 (USA), the NeurIPS 2019 (Canada) and the ICML 2020 (Austria). Also, I will participate in top schools like the 10th Lisbon Machine Learning School (LxMLS 2020) and the Cornell, Maryland, Max Planck Pre-doctoral Research School (CMMRS 2020). 
+My participation in in prestigious conferences includes the ICML 2019 (USA), the NeurIPS 2019 (Canada) and the ICML 2020 (Austria). I will participate in top schools like the 10th Lisbon Machine Learning School (LxMLS 2020) and the Cornell, Maryland, Max Planck Pre-doctoral Research School (CMMRS 2020). Also, my academic service includes participation as commite member in the role of reviewer for LXAI Workshop at NeurIPS (2019) and LXAI Workshop at ICML (2020).
 </p>
 </p>
 <h2>Research interests</h2>
@@ -141,7 +141,7 @@ My research experience includes two research fellowships in Artificial Intellige
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-07-2020 08:16 GMT <br/> 
+Website updated 06-07-2020 08:19 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
