--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div id="layout_container">
 <div id="layout_content">
 <div id="site_title">
-<h1><b><a href="">Dennis Núñez Fernández</a></b></h1>
+<h1><b><a href="https://dennishnf.com/">Dennis Núñez Fernández</a></b></h1>
 <h2>B.Sc. in Electronic Engineering, Universidad Nacional de Ingeniería - UNI</h2>
 </div>
 <div class="navigation">
@@ -144,7 +144,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 07-07-2020 18:16 GMT <br/> 
+Website updated 07-07-2020 18:18 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
