--- a/cv/cv.html
+++ b/cv/cv.html
@@ -64,8 +64,10 @@
 <br/>
 <h2>Curriculum Vitae</h2>
 <br/>
+<h3>CV in English:</h3>
 <p> 
 &nbsp &nbsp <a target="_blank" href="CV-DennisNúñezFernández-english.pdf">CV in English</a>
+<h3>CV in Spanish:</h3>
 <br/>
 &nbsp &nbsp <a target="_blank" href="CV-DennisNúñezFernández-spanish.pdf">CV in Spanish</a>
 <br/>
@@ -95,7 +97,7 @@
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 25-07-2020 22:39 GMT <br/> 
+Website updated 25-07-2020 22:41 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
