--- a/cv/cv.html
+++ b/cv/cv.html
@@ -66,11 +66,11 @@
 <br/>
 <h3>CV in English:</h3>
 <p> 
-&nbsp &nbsp <a href="CV-DennisNúñezFernández-english.pdf">CV in English</a>
+&nbsp &nbsp <a href="CV-DennisNúñezFernández-english.pdf">CV-DennisNúñezFernández-english.pdf</a>
 </p>
 <h3>CV in Spanish:</h3>
 <p> 
-&nbsp &nbsp <a href="CV-DennisNúñezFernández-spanish.pdf">CV in Spanish</a>
+&nbsp &nbsp <a href="CV-DennisNúñezFernández-spanish.pdf">CV-DennisNúñezFernández-spanish.pdf</a>
 </p>
 <br/>
 
@@ -98,7 +98,7 @@
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 25-07-2020 22:49 GMT <br/> 
+Website updated 25-07-2020 22:50 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
