--- a/README.html
+++ b/README.html
@@ -65,7 +65,7 @@
 
 <h2>README</h2>
 
-<p align="justify">My personal Website, Dennis Núñez Fernández. At the moment, Bitbucked is used as host server.</p>
+<p align="justify">My personal Website, Dennis Núñez Fernández. At the moment, GitHub is used as host server.</p>
 <p align="justify">The creation of this website was created usng the principles:</p>
 <p align="justify">- Simplicity.</p>
 <p align="justify">- Perdurability.</p>
@@ -81,7 +81,7 @@
 <h3>Using</h3>
 
 <p align="justify">Navigate to repository with cd, example:</p>
-<p><code class="barcode">$ cd Repositories/dennishnf.bitbucket.io/
+<p><code class="barcode">$ cd Repositories/dennishnf.github.io/
 </code></p>
 
 <p align="justify">To CREATE html files and NOT UPDATE:</p>
@@ -121,7 +121,7 @@
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 26-07-2020 16:37 GMT <br/> 
+Website updated 26-07-2020 16:46 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
