--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <p>
 <ul>
 <li>2020/08 - Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining</li>
-<li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers">My another paper was selected for poster presentation at HSYS workshop at ICML 2020</a></li>
-<li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/">My papers were accepted for oral & poster presentations at ML4GH workshop at ICML 2020</a></li>
+<li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers">My another paper was selected for poster presentation at HSYS workshop at the ICML 2020</a></li>
+<li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/">My papers were accepted for oral & poster presentations at ML4GH workshop at the ICML 2020</a></li>
 <li>2020/06 - Thankful for winning a LXAI grant for my participation in the prestigious ICML 2020</li>
 <li>2020/06 - Grateful for winning a grant for the ACL 2020, the best conference on NLP</li>
 <li>2020/06 - <a href="https://sites.google.com/view/inclusion-2020/inclusion-fellowsbio#h.kvia409tw9k8">Selected as an Inclusion Fellow for the Science and Systems (RSS) 2020 conference</a></li>
