--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2019/10 - Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</li>
 <li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org">Selected as program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2019</a></li>
 <li>2019/09 - Invited to give a talk at the 22vo Meetup 2019, Data Science Research Perú</li>
-<li>2019/09 - Glad to give a talk about a UPCH project at 'Innova como ellos' event, at Innóvate Perú</li>
+<li>2019/09 - Glad to give a talk about a UPCH project at the event: 'Innova como ellos', org. by Innóvate Perú</li>
 <li>2019/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding">My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</a></li>
 <li>2019/06 - <a href="https://simbig.org/SIMBig2019/en/program.html">My 2 submitted papers were accepted for the SIMBig 2019 conference</a></li>
 <li>2019/05 - Glad to give a talk at Computer Science Colloquium, chaired by PhD Modesto Montoya</li>
@@ -146,7 +146,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 21-08-2020 08:29 GMT <br/> 
+Website updated 21-08-2020 08:30 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
