--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/08 - Included as program committee member (reviewer) for the IEEE EIRCON 2020</li>
+<li>2020/08 - Invited and included as a program committee member (reviewer) for the IEEE EIRCON 2020</li>
 <li>2020/08 - Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining</li>
 <li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers">My another paper was selected for poster presentation at HSYS workshop at the ICML 2020</a></li>
 <li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/">My papers were accepted for oral & poster presentations at ML4GH workshop at the ICML 2020</a></li>
@@ -99,7 +99,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2020/06 - Glad to obtain a grant for the Robotics: Science and Systems (RSS) 2020 conference</li>
 <li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a></li>
 <li>2020/05 - Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</li>
-<li>2020/03 - Included as program committee member (reviewer) for the IEEE INTERCON 2020</li>
+<li>2020/03 - Included as a program committee member (reviewer) for the IEEE INTERCON 2020</li>
 <li>2020/03 - Selected to participate in the CMMRS 2020: Cornell, Maryland, Max Planck Pre-doctoral School</li>
 <li>2020/03 - Glad to obtain a grant for the School of AI programme 2020, hosted by Pi School</li>
 <li>2020/01 - <a href="http://ailatinsum.mit.edu/">Selected as a winner of the AI Latin America SumMIT, event held at the MIT Media Lab</a></li>
@@ -108,7 +108,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2019/10 - Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019</li>
 <li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters">My 3 submitted abstracts were accepted for the LXAI Workshop at the NeurIPS 2019</a></li>
 <li>2019/10 - Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</li>
-<li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org">Selected as program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2019</a></li>
+<li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2019</a></li>
 <li>2019/09 - Invited to give a talk at the 22vo Meetup 2019, organized by Data Science Research Perú</li>
 <li>2019/09 - Glad to give a talk about a UPCH project at the event: 'Innova como ellos', org. by Innóvate Perú</li>
 <li>2019/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding">My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</a></li>
@@ -147,7 +147,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 25-08-2020 05:12 GMT <br/> 
+Website updated 25-08-2020 05:15 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
