--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/08 - Grateful to have won a grant for the Advanced Program in Data Science & Global Skills, provided by MIT</li>
+<li>2020/08 - Selected for the Advanced Program in Data Science & Global Skills Scholarship, provided by MIT</li>
 <li>2020/08 - Included as a program committee member (reviewer) for the IEEE EIRCON 2020</li>
 <li>2020/08 - Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining</li>
 <li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers">My another paper was selected for poster presentation at HSYS workshop at the ICML 2020</a></li>
@@ -148,7 +148,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 01-09-2020 01:50 GMT <br/> 
+Website updated 01-09-2020 01:51 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
