--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <h2>Research interests</h2>
 <p>
 <ul>
-<li>Artificial Intelligence</li>
-<li>Machine Learning</li>
-<li>Computer Vision</li>
-<li>Signal Processing and Control</li>
-<li>Real-Time Systems</li>
+<li>Artificial Intelligence.</li>
+<li>Machine Learning.</li>
+<li>Computer Vision.</li>
+<li>Signal Processing and Control.</li>
+<li>Real-Time Systems.</li>
 </ul>
 </p>
 <br/>
@@ -148,7 +148,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 03-09-2020 07:39 GMT <br/> 
+Website updated 03-09-2020 07:40 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
