--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2020/06 - <a href="https://sites.google.com/view/inclusion-2020/inclusion-fellowsbio#h.kvia409tw9k8">Selected as an Inclusion Fellow for the Science and Systems (RSS) 2020 conference</a>.</li>
 <li>2020/06 - Glad to obtain a grant for the Robotics: Science and Systems (RSS) 2020 conference.</li>
 <li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
-<li>2020/05 - Selected to participate in the Lisbon Machine Learning School (LxMLS 2020).</li>
+<li>2020/05 - <a href="http://lxmls.it.pt/2020/">Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
 <li>2020/03 - Included as a program committee member (reviewer) for the IEEE INTERCON 2020.</li>
 <li>2020/03 - Selected to participate in the CMMRS 2020: Cornell, Maryland, Max Planck Pre-doctoral School.</li>
 <li>2020/03 - Glad to obtain a grant for the School of AI programme 2020, hosted by Pi School.</li>
@@ -151,7 +151,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-09-2020 07:13 GMT <br/> 
+Website updated 06-09-2020 07:19 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
